I made Argentina exist again

--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -122,7 +122,7 @@
     "    'France',\n",
     "    'Spain',\n",
     "    'Chile',\n",
-    "    'Argentia',\n",
+    "    'Argentina',\n",
     "    'Portugal',\n",
     "    'Australia',\n",
     "    'New Zealand',\n",
@@ -148,6 +148,15 @@
     "    wine_df = wine_df.append(cleaned_wine_df.loc[cleaned_wine_df['Country'] == land, :], ignore_index=True)\n",
     "    \n",
     "wine_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wine_df['Country'].value_counts()"
    ]
   },
   {
