--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -212,44 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# making a group by on varietal column\n",
-    "variety_groups = wine_df.groupby('Variety')\n",
-    "variety_groups"
+    "# we only want the ones with over a thousand datas\n",
+    "wine_df.Variety.value_counts().head(30)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#going to make a data frame\n",
-    "variety_counts = variety_groups['Variety'].count()\n",
-    "variety_names = variety_groups['Variety'].unique()\n",
-    "variety_names = pd.Series(variety_names)\n",
-    "variety_names = variety_names.str[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -264,9 +229,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wines_above_1000 = [wine_list[i].index for i in range(len(wine_list)) if wine_list[i] > 1000]\n",
-    "print(wines_above_1000)"
+    "# making list of top 25 varieties\n",
+    "num_vars = 25\n",
+    "ranked_varieties = wine_df.Variety.value_counts().head(num_vars).index\n",
+    "print(ranked_varieties)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making a new df for only those selected varieties\n",
+    "\n",
+    "# start with empty df\n",
+    "variety_df = wine_df.loc[wine_df['Variety'] == \"Andy's Blend\", :]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# now append all rows for each variety list\n",
+    "for wine in ranked_varieties:\n",
+    "    variety_df = variety_df.append(wine_df.loc[wine_df['Variety'] == wine, :], ignore_index=True)\n",
+    "\n",
+    "variety_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating filepath to \n",
+    "out_file2 = 'variety_data.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variety_df.to_csv(out_file2, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
