worked on bonus question

--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -68,6 +68,7 @@
    "outputs": [],
    "source": [
     "# keeping only the columns we want (dropping imported index, description, designation, region_2 and winery)\n",
+    "# dropping those partially because we don't need them , parially because they lose us lots of data\n",
     "less_dirty_wine_df = dirty_wine_df[['country', 'points', 'price', 'province', 'region_1', 'variety',  ]]"
    ]
   },
@@ -280,6 +281,95 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is for the bonus part of looking where to plant a specific grape variety"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wine_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I want only US entries for this excersize and because I am working with region I will now need to drop na's\n",
+    "# in that column\n",
+    "\n",
+    "# dropping all countries besides us\n",
+    "us_df = wine_df.loc[wine_df['Country'] == 'US', :]\n",
+    "\n",
+    "region_df = us_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# looks like i only lost about a hundred and thirty six entries so that is good"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# region_df['Province'].value_counts().head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making file path for bonus work csv \n",
+    "out_file3 = 'region_data.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writing csv\n",
+    "region_df.to_csv(out_file3, index=False)"
+   ]
   },
   {
    "cell_type": "code",
