cleaned up some dependencies

--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -242,6 +242,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "type(ranked_varieties)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# making a new df for only those selected varieties\n",
     "\n",
     "# start with empty df\n",
