--- a/analyzing_data.ipynb
+++ b/analyzing_data.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-
     "#import dependencies\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +21,7 @@
    "source": [
     "# import .csv\n",
     "csv_path = \"wine_data.csv\"\n",
-    "wine_df = pd.read_csv(csv_path)\n",
+    "wine_df = pd.read_csv(csv_path, low_memory=False)\n",
     "wine_df"
    ]
   },
@@ -33,18 +32,6 @@
    "outputs": [],
    "source": [
     "# jeanaej's code starts here"
-
-  
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
