add scatter of walla walla

--- a/bonus_Q_analysis.ipynb
+++ b/bonus_Q_analysis.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "# dependencies\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import linregress"
    ]
   },
   {
@@ -150,12 +151,15 @@
    "source": [
     "# lets plot this stuff\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.bar(region_list, region_count_plot, color='purple')\n",
+    "\n",
+    "plt.bar(region_list, region_count_plot, color='darkmagenta', edgecolor='black')\n",
     "\n",
     "plt.title(f'Most Popular Regions to Grow {grape} by Volume')\n",
     "plt.xlabel('Region')\n",
     "plt.ylabel('Number of Wines Produced')\n",
     "plt.xticks(rotation=90)\n",
+    "\n",
+    "plt.grid(axis='y', alpha=.5)\n",
     "\n",
     "plt.show()"
    ]
@@ -192,6 +196,7 @@
     "# just looking at the distrubition of the price\n",
     "price_mean = grape_df.Price.mean()\n",
     "price_median = grape_df.Price.median()\n",
+    "plt.figure(figsize=(8,6))\n",
     "plt.hist(grape_df.Price)\n",
     "plt.vlines(price_mean,0,2000)\n",
     "plt.vlines(price_median,0,2000, color='r')\n",
@@ -250,11 +255,13 @@
    "source": [
     "# making a plot of top regions based on price\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.bar(region_price_list, region_price_plot, color='green')\n",
+    "plt.bar(region_price_list, region_price_plot, color='olive', edgecolor='black')\n",
     "\n",
     "plt.title(f'Most Popular Regions to Grow {grape} by Average Price')\n",
     "plt.xlabel('Region')\n",
     "plt.ylabel('Average Price')\n",
+    "\n",
+    "plt.grid(axis='y', alpha=.5)\n",
     "\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()\n",
@@ -279,6 +286,8 @@
    "outputs": [],
    "source": [
     "# i want to decide wether to look at median or mean\n",
+    "plt.figure(figsize=(8,6))\n",
+    "\n",
     "plt.hist(grape_df.Points)\n",
     "# that looks pretty normal\n",
     "\n",
@@ -335,13 +344,15 @@
    "source": [
     "# making a plot of top regions based on points\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.bar(region_points_list, region_points_plot, color='gold')\n",
+    "plt.bar(region_points_list, region_points_plot, color='goldenrod', edgecolor='black')\n",
     "\n",
     "plt.title(f'Most Popular Regions to Grow {grape} by Average Rating')\n",
     "plt.xlabel('Region')\n",
     "plt.ylabel('Average Points')\n",
     "\n",
     "plt.ylim(80,100) # pretty typical window for wine ratings (at least for good wines)\n",
+    "\n",
+    "plt.grid(axis='y', alpha=.5)\n",
     "\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()"
@@ -402,6 +413,134 @@
     "\n",
     "Spring Mountain District and Calistoga are both by and in California's Napa Valley Region\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## this next part only pertains to Syrah"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# I am making a dataframe of only walla walla valley (both oregon and washington)\n",
+    "walla_walla_or = grape_df.loc[grape_df[\"Region\"] == \"Walla Walla Valley (OR)\", :]\n",
+    "walla_walla_wa = grape_df.loc[grape_df[\"Region\"] == \"Walla Walla Valley (WA)\", :]\n",
+    "\n",
+    "walla_walla = walla_walla_or.append(walla_walla_wa)\n",
+    "\n",
+    "walla_walla.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting Price VS Points for Walla Walla Syrah (Two different States)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "walla_wa = plt.scatter(walla_walla_wa.Points, walla_walla_wa.Price, color='lightblue',\n",
+    "                                      alpha=.4, label='Walla Walla (WA)') # washington\n",
+    "walla_or = plt.scatter(walla_walla_or.Points, walla_walla_or.Price, color='orange',\n",
+    "                        alpha=.4, label='Walla Walla (OR)') # oregon\n",
+    "# i need to add a legend\n",
+    "plt.title(\"Price VS Points for Walla Walla Valley Syrah\")\n",
+    "plt.xlabel('Points (out of 100)')\n",
+    "plt.ylabel('Price ($)')\n",
+    "\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting Price VS Points for Walla Walla Syrah (Two different States)\n",
+    "\n",
+    "# calulating linear regression\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = linregress(walla_walla.Points, walla_walla.Price)\n",
+    "regressline = slope * walla_walla.Points + intercept\n",
+    "print(f\"r is {rvalue} and r^2 is {rvalue**2}\")\n",
+    "\n",
+    "line_eq = f\"{slope:.2f}x{intercept:.2f}\"\n",
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "walla_wa = plt.scatter(walla_walla_wa.Points, walla_walla_wa.Price, color='lightblue',\n",
+    "                                      alpha=.4, label='Walla Walla (WA)') # washington\n",
+    "walla_or = plt.scatter(walla_walla_or.Points, walla_walla_or.Price, color='orange',\n",
+    "                        alpha=.4, label='Walla Walla (OR)') # oregon\n",
+    "\n",
+    "plt.plot(walla_walla.Points, regressline, color='r', alpha=.5)\n",
+    "\n",
+    "plt.annotate(line_eq, (95,50), color='r', alpha=.5)\n",
+    "\n",
+    "# i need to add a legend\n",
+    "plt.title(\"Price VS Points for Walla Walla Valley Syrah\")\n",
+    "plt.xlabel('Points (out of 100)')\n",
+    "plt.ylabel('Price ($)')\n",
+    "\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting Price VS Points for Walla Walla Syrah (Two different States)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(walla_walla_or.Points, walla_walla_or.Price, color='orange', alpha=.4) # oregon\n",
+    "\n",
+    "plt.title(\"Price VS Points for Walla Walla Valley Oregon Syrah\")\n",
+    "plt.xlabel('Points (out of 100)')\n",
+    "plt.ylabel('Price ($)')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
