Added code linear regressions for Country Comparisons

--- a/analyzing_data.ipynb
+++ b/analyzing_data.ipynb
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Getting the varieties\n",
-    "var1ieties = wine_df[\"Variety\"].unique()\n",
+    "varieties = wine_df[\"Variety\"].unique()\n",
     "varieties = sorted(varieties)\n",
     "varieties"
    ]
@@ -204,12 +204,12 @@
     "wine_variety_group = wine_df.groupby([\"Variety\"])\n",
     "\n",
     "# Getting the mean of points and price\n",
-    "points_wv_mean = variety_group[\"Points\"].mean()\n",
-    "price_wv_mean = variety_group[\"Price\"].mean()\n",
+    "points_wv_mean = wine_variety_group[\"Points\"].mean()\n",
+    "price_wv_mean = wine_variety_group[\"Price\"].mean()\n",
     "\n",
     "# Getting the median of points and price\n",
-    "points_wv_median = variety_group[\"Points\"].median()\n",
-    "price_wv_median = variety_group[\"Price\"].median()"
+    "points_wv_median = wine_variety_group[\"Points\"].median()\n",
+    "price_wv_median = wine_variety_group[\"Price\"].median()"
    ]
   },
   {
@@ -364,6 +364,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## All Wine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the Price and Points of Wines\n",
+    "all_price = wine_df[\"Price\"]\n",
+    "all_points = wine_df[\"Points\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rating Points by Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of the Rating Points by Price of all wines\n",
+    "plt.scatter(all_price, all_points, color = \"yellow\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph\n",
+    "plt.title(f\"All Wine Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Points\")\n",
+    "\n",
+    "plt.ylim(75,105)\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlation coefficient\n",
+    "r = st.pearsonr(all_price, all_points)\n",
+    "r = r[0]**2\n",
+    "\n",
+    "print(f'The correlation coefficient of price and rating points for all wines {round(r,2)}\\n')\n",
+    "\n",
+    "# Calculate the linear regression model \n",
+    "\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(all_price, all_points)\n",
+    "regress_values = all_price * slope + intercept\n",
+    "line_eq = f' y = {round(slope,2)} x + {round(intercept,2)}'\n",
+    "\n",
+    "print(line_eq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of the Rating Points by Price of all wines\n",
+    "# with the linear regression line and equation\n",
+    "\n",
+    "plt.plot(all_price,regress_values, \"r-\")\n",
+    "plt.scatter(all_price, all_points, color = \"yellow\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph with the Linear Regression\n",
+    "plt.title(f\"All Wine Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Points\")\n",
+    "\n",
+    "plt.ylim(75,105)\n",
+    "plt.grid(True)\n",
+    "plt.annotate(line_eq, (500,80), fontsize = 14, color =\"r\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Price by Rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of the Price by Rating Points of all wines\n",
+    "plt.scatter(all_points, all_price, color = \"green\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph\n",
+    "plt.title(f\"All Wine Price by Rating Points\")\n",
+    "plt.xlabel(\"Points\")\n",
+    "plt.ylabel(\"Price ($)\")\n",
+    "\n",
+    "plt.xlim(75,105)\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlation coefficient\n",
+    "r = st.pearsonr(all_points, all_price)\n",
+    "r = r[0]**2\n",
+    "\n",
+    "print(f'The correlation coefficient of price and rating points for all wines {round(r,2)}\\n')\n",
+    "\n",
+    "# Calculate the linear regression model \n",
+    "\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(all_points, all_price)\n",
+    "regress_values = all_points * slope + intercept\n",
+    "line_eq = f' y = {round(slope,2)} x + {round(intercept,2)}'\n",
+    "\n",
+    "print(line_eq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of the Price by Rating Points of all wines\n",
+    "# with the linear regression line and equation\n",
+    "\n",
+    "plt.plot(all_points,regress_values, \"r-\")\n",
+    "plt.scatter(all_points, all_price, color = \"green\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph with the Linear Regression\n",
+    "plt.title(f\"All Wine Price by Rating Points\")\n",
+    "plt.xlabel(\"Points\")\n",
+    "plt.ylabel(\"Price ($)\")\n",
+    "\n",
+    "plt.xlim(75,105)\n",
+    "plt.grid(True)\n",
+    "plt.annotate(line_eq, (76,1500), fontsize = 14, color =\"r\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Wines Below $25"
    ]
   },
@@ -403,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot \n",
+    "# Generate a scatter plot of the Rating Points by Price of economical wines\n",
     "plt.scatter(lp_price, lp_points, color = \"yellow\", edgecolor = \"black\")\n",
     "\n",
     "# Labeling the graph\n",
@@ -427,7 +589,7 @@
     "r = st.pearsonr(lp_price, lp_points)\n",
     "r = r[0]**2\n",
     "\n",
-    "print(f'The correlation coefficient of price and rating points for economical wines {round(r,2)}\\n')\n",
+    "print(f'The correlation coefficient of price and rating points for expensive wines {round(r,2)}\\n')\n",
     "\n",
     "# Calculate the linear regression model \n",
     "\n",
@@ -444,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot of the average tumor volume vs. mouse weight\n",
+    "# Generate a scatter plot of the Rating Points by Price of economical wines\n",
     "# with the linear regression line and equation\n",
     "\n",
     "plt.plot(lp_price,regress_values, \"r-\")\n",
@@ -475,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot \n",
+    "# Generate a scatter plot of the Price by Rating Points of Economical wines\n",
     "plt.scatter(lp_points, lp_price, color = \"green\", edgecolor = \"black\")\n",
     "\n",
     "# Labeling the graph\n",
@@ -516,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot of the average tumor volume vs. mouse weight\n",
+    "# Generate a scatter plot of the Price by Rating Points of Economical wines\n",
     "# with the linear regression line and equation\n",
     "\n",
     "plt.plot(lp_points,regress_values, \"r-\")\n",
@@ -569,7 +731,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot \n",
+    "# Generate a scatter plot of the Rating Points by Price of expensive wines\n",
     "plt.scatter(hp_price, hp_points, color = \"yellow\", edgecolor = \"black\")\n",
     "\n",
     "plt.title(f\"Expensive Wines (${high_price} and above) Rating Points by Price\")\n",
@@ -593,7 +755,7 @@
     "r = st.pearsonr(hp_price, hp_points)\n",
     "r = r[0]**2\n",
     "\n",
-    "print(f'The correlation coefficient of price and rating points for economical wines {round(r,2)}\\n')\n",
+    "print(f'The correlation coefficient of price and rating points for expensive wines {round(r,2)}\\n')\n",
     "\n",
     "# Calculate the linear regression model \n",
     "\n",
@@ -610,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot of the average tumor volume vs. mouse weight\n",
+    "# Generate a scatter plot of the Rating Points by Price of expensive wines\n",
     "# with the linear regression line and equation\n",
     "\n",
     "plt.plot(hp_price,regress_values, \"r-\")\n",
@@ -631,10 +793,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Generate a scatter plot \n",
+    "# Generate a scatter plot of the Price by Rating Points of expensive wines\n",
     "plt.scatter(hp_points, hp_price, color = \"green\", edgecolor = \"black\")\n",
     "\n",
     "# Labeling the graph\n",
@@ -658,7 +822,7 @@
     "r = st.pearsonr(hp_points, hp_price)\n",
     "r = r[0]**2\n",
     "\n",
-    "print(f'The correlation coefficient of price and rating points for economical wines {round(r,2)}\\n')\n",
+    "print(f'The correlation coefficient of price and rating points for expensive wines {round(r,2)}\\n')\n",
     "\n",
     "# Calculate the linear regression model \n",
     "\n",
@@ -675,14 +839,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a scatter plot of the average tumor volume vs. mouse weight\n",
+    "# Generate a scatter plot of the Price by rating Points of Expensive Wines\n",
     "# with the linear regression line and equation\n",
     "\n",
     "plt.plot(hp_points,regress_values, \"r-\")\n",
     "plt.scatter(hp_points, hp_price, color = \"green\", edgecolor = \"black\")\n",
     "\n",
     "# Labeling the graph with the Linear Regression\n",
-    "plt.title(f\"Economical Wines (${high_price} and below) Price by Rating Points\")\n",
+    "plt.title(f\"Expensive Wines (${high_price} and below) Price by Rating Points\")\n",
     "plt.xlabel(\"Points\")\n",
     "plt.ylabel(\"Price ($)\")\n",
     "\n",
@@ -837,12 +1001,266 @@
     "ax1.boxplot(compare_price, labels = country_comparisons, showfliers = True, flierprops = outlier)\n",
     "\n",
     "ax1.set_title(f\"Wine Price of {country_one} and {country_two}\")\n",
-    "ax1.set_ylabel(\"Rating Points\")\n",
+    "ax1.set_ylabel(\"Price ($)\")\n",
     "ax1.set_xlabel(\"Countries\")\n",
     "\n",
     "ax1.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a box plot of the price of each wine in 2 compared countries\n",
+    "outlier = dict(markerfacecolor = 'green', marker = \"o\")\n",
+    "fig1,ax1 = plt.subplots()\n",
+    "ax1.boxplot(compare_price, labels = country_comparisons, showfliers = False)\n",
+    "\n",
+    "ax1.set_title(f\"Wine Price of {country_one} and {country_two}\")\n",
+    "ax1.set_ylabel(\"Price ($)\")\n",
+    "ax1.set_xlabel(\"Countries\")\n",
+    "\n",
+    "ax1.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing Rating Points by Price Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Country One"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the price and points of country one\n",
+    "wine_results_one = wine_df.loc[wine_df[\"Country\"] == country_one]  \n",
+    "country_one_points = wine_results[\"Points\"]\n",
+    "country_one_price = wine_results[\"Price\"]\n",
+    "country_one_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create points by price scatter plot for country one\n",
+    "plt.scatter(country_one_price, country_one_points, color = \"yellow\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph\n",
+    "plt.title(f\"Wines from {country_one} Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Point\")\n",
+    "\n",
+    "plt.ylim(75,105)\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlation coefficient\n",
+    "r = st.pearsonr(country_one_price, country_one_points)\n",
+    "r = r[0]**2\n",
+    "\n",
+    "print(f'The correlation coefficient of price and rating points for wines from {country_one} {round(r,2)}\\n')\n",
+    "\n",
+    "# Calculate the linear regression model \n",
+    "\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(country_one_price, country_one_points)\n",
+    "regress_values = country_one_price * slope + intercept\n",
+    "line_eq = f' y = {round(slope,2)} x + {round(intercept,2)}'\n",
+    "\n",
+    "print(line_eq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of the Rating Points by Price of wines from country one\n",
+    "# with the linear regression line and equation\n",
+    "\n",
+    "plt.plot(country_one_price,regress_values, \"r-\")\n",
+    "plt.scatter(country_one_price, country_one_points, color = \"yellow\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph with the Linear Regression\n",
+    "plt.title(f\"Wines from {country_one} Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Points\")\n",
+    "\n",
+    "plt.ylim(75,105)\n",
+    "plt.grid(True)\n",
+    "plt.annotate(line_eq, (500,80), fontsize = 14, color =\"r\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Country Two"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the price and points of country one\n",
+    "wine_results_two = wine_df.loc[wine_df[\"Country\"] == country_two]  \n",
+    "country_two_points = wine_results[\"Points\"]\n",
+    "country_two_price = wine_results[\"Price\"]\n",
+    "country_two_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create points by price scatter plot for country two\n",
+    "plt.scatter(country_two_price, country_two_points, color = \"yellow\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph\n",
+    "plt.title(f\"Wines from {country_two} Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Point\")\n",
+    "\n",
+    "plt.ylim(75,105)\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlation coefficient\n",
+    "r = st.pearsonr(country_two_price, country_two_points)\n",
+    "r = r[0]**2\n",
+    "\n",
+    "print(f'The correlation coefficient of price and rating points for wines from {country_two} {round(r,2)}\\n')\n",
+    "\n",
+    "# Calculate the linear regression model \n",
+    "\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(country_two_price, country_two_points)\n",
+    "regress_values = country_two_price * slope + intercept\n",
+    "line_eq = f' y = {round(slope,2)} x + {round(intercept,2)}'\n",
+    "\n",
+    "print(line_eq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of the Rating Points by Price of wines from country two\n",
+    "# with the linear regression line and equation\n",
+    "\n",
+    "plt.plot(country_two_price,regress_values, \"r-\")\n",
+    "plt.scatter(country_two_price, country_two_points, color = \"yellow\", edgecolor = \"black\")\n",
+    "\n",
+    "# Labeling the graph with the Linear Regression\n",
+    "plt.title(f\"Wines from {country_two} Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Points\")\n",
+    "\n",
+    "plt.ylim(75,105)\n",
+    "plt.grid(True)\n",
+    "plt.annotate(line_eq, (500,80), fontsize = 14, color =\"r\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tried to combine the scatter plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a grah of rating points by price for both country one and two\n",
+    "fig = plt.figure()\n",
+    "ax1 = fig.add_subplot()\n",
+    "\n",
+    "ax1.scatter(country_one_price, country_one_points, s=10, c='blue', marker=\"s\", label= country_one)\n",
+    "ax1.scatter(country_two_price,country_two_points, s=10, c='orange', marker=\"o\", label= country_two)\n",
+    "\n",
+    "\n",
+    "plt.title(f\"Wines from {country_one} and {country_two} Rating Points by Price\")\n",
+    "plt.xlabel(\"Price ($)\")\n",
+    "plt.ylabel(\"Point\")\n",
+    "\n",
+    "plt.legend(loc='best')\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing Price by Rating Points Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
