changed linregress to st.linregress

--- a/analyzing_data.ipynb
+++ b/analyzing_data.ipynb
@@ -1586,7 +1586,7 @@
     "def wine_regression(x_values, y_values, wine_variety):\n",
     "    \n",
     "\n",
-    "    (slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
+    "    (slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_values, y_values)\n",
     "    regress_values = x_values * slope + intercept\n",
     "    line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "\n",
